#+OPTIONS: ^:nil
#+TITLE: Change Log

* Noteworthy changes to this project will be documented in this file.
  :PROPERTIES:
  :CUSTOM_ID: change-log
  :END:

** 1.8.4 - 2018-0?-??
   :PROPERTIES:
   :CUSTOM_ID: section
   :END:

*** Changed
    :PROPERTIES:
    :CUSTOM_ID: changed
    :END:

- Migrate to rebar3.
- Switch RE2 default revision to 2018-04-01.

** 1.8.3 - 2018-03-03
   :PROPERTIES:
   :CUSTOM_ID: section
   :END:

*** Fixed
    :PROPERTIES:
    :CUSTOM_ID: fixed
    :END:

- dev/getrebar: fix OTP 21 string API compatibility

*** Changed
    :PROPERTIES:
    :CUSTOM_ID: changed
    :END:

- Switch RE2 default revision to 2018-03-01.
- Adjust GitLab pages background color.
- Allow overriding RE2 git remote (Thanks Anthony Molinaro).

** 1.8.2 - 2018-02-13
   :PROPERTIES:
   :CUSTOM_ID: section
   :END:

*** Changed
    :PROPERTIES:
    :CUSTOM_ID: changed
    :END:

- Switch RE2 default revision to 2018-02-01.
- Implement GitLab Pages.
- Improve API documentation.

** 1.8.1 - 2018-01-01
   :PROPERTIES:
   :CUSTOM_ID: section-1
   :END:

*** Changed
    :PROPERTIES:
    :CUSTOM_ID: changed-1
    :END:

- Switch RE2 default revision to 2017-12-01.
- Use clang-format for C++ formatting.

** 1.8.0 - 2017-11-19
   :PROPERTIES:
   :CUSTOM_ID: section-2
   :END:

*** Fixed
    :PROPERTIES:
    :CUSTOM_ID: fixed
    :END:

- Fix resource leak in unlikely error case.
- Fix QuickCheck properties and test them by default.

*** Changed
    :PROPERTIES:
    :CUSTOM_ID: changed-2
    :END:

- Switch RE2 default revision to 2017-11-01.

** 1.7.9 - 2017-09-17
   :PROPERTIES:
   :CUSTOM_ID: section-3
   :END:

*** Changed
    :PROPERTIES:
    :CUSTOM_ID: changed-3
    :END:

- Publish on Hex.pm (Thanks Nathaniel Waisbrot).
- gitlab-ci: dialyze in a separate job.
- Rewrite README.

** 1.7.8 - 2017-08-17
   :PROPERTIES:
   :CUSTOM_ID: section-4
   :END:

*** Changed
    :PROPERTIES:
    :CUSTOM_ID: changed-4
    :END:

- Switch RE2 default revision to 2017-08-01.